chat message load more

--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -41,6 +41,7 @@
     display: inline-block;
 }
 .chatbox .box-header .partner-name {
+    width: 180px;
     height: 28px;
     line-height: 28px;
     font-weight: bold;
