--- a/views/account/index.pug
+++ b/views/account/index.pug
@@ -83,7 +83,7 @@ block content
                                     th(name='userName') Tên đăng nhập
                                     th(name='email') Email
                                     th(name='statusDisplay') Trạng thái
-                                    th.text-center(name='actions', actions={view: '/account/view', edit: '/account/edit', delete: '/account/delete'}, style='width: 140px;display: block;border-bottom:0;') Hành động
+                                    th.text-center(name='actions', actions={view: '/account/view', edit: '/account/edit', delete: '/account/delete'}, style='width: 140px;') Hành động
                             tbody
                                 each dt, i in data
                                     tr
