--- a/views/news-category/index.pug
+++ b/views/news-category/index.pug
@@ -72,7 +72,7 @@ block content
                                     th(name='categoryName') Tên danh mục
                                     th(name='slug') Slug
                                     th(name='statusDisplay') Trạng thái
-                                    th.text-center(name='actions', actions={view: '/news-category/view', edit: '/news-category/edit', delete: '/news-category/delete'}, style='width: 140px;display: block;border-bottom:0;') Hành động
+                                    th.text-center(name='actions', actions={view: '/news-category/view', edit: '/news-category/edit', delete: '/news-category/delete'}, style='width: 140px;') Hành động
                             tbody
                                 each dt, i in data
                                     tr
