--- a/views/news/edit.pug
+++ b/views/news/edit.pug
@@ -59,7 +59,7 @@ block content
     // Content Header (Page header)
     section.content-header
         h1
-            | Viết bài
+            | Sửa bài viết
             small Ahihi
         ol.breadcrumb
             li
@@ -70,7 +70,7 @@ block content
                 a(href='/news')
                     i.fa.fa-users
                     |  Tin tức
-            li.active Viết bài
+            li.active Sửa bài viết
     // Main content
     section.content
         .row
