--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -20,27 +20,15 @@ header.main-header
 		.navbar-custom-menu
 			ul.nav.navbar-nav
 				// Messages: style can be found in dropdown.less
-				li.dropdown.messages-menu
+				li.dropdown#header-messages.messages-menu
 					a.dropdown-toggle(href='#', data-toggle='dropdown')
 						i.fa.fa-envelope-o
-						span.label.label-success 4
-					ul.dropdown-menu
-						li.header You have 4 messages
+						span.message-count.label.label-danger 0
+					ul.dropdown-menu.message-list
+						li.header Tin nhắn gần đây
 						li
 							// inner menu: contains the actual data
 							ul.menu
-								li
-									// start message
-									a(href='#')
-										.pull-left
-											img.img-circle(src='/themes/admin-lte/img/user2-160x160.jpg', alt='User Image')
-										h4
-											| Support Team
-											small
-												i.fa.fa-clock-o
-												|  5 mins
-										p Why not buy a new awesome theme?
-								// end message
 						li.footer
 							a(href='#') See All Messages
 				// Notifications: style can be found in dropdown.less
@@ -49,34 +37,34 @@ header.main-header
 						i.fa.fa-bell-o
 						span.notification-count.label.label-warning(style='display:none;') 0
 					ul.dropdown-menu
-						li.notification-title.header Không có thông báo mới
+						li.notification-title.header Không có thông báo nào
 						li
 							// inner menu: contains the actual data
 							ul.notification-list.menu
 						li.footer
 							a(href='#') Xem thêm
 				// Tasks: style can be found in dropdown.less
-				li.dropdown.tasks-menu
-					a.dropdown-toggle(href='#', data-toggle='dropdown')
-						i.fa.fa-flag-o
-						span.label.label-danger 9
-					ul.dropdown-menu
-						li.header You have 9 tasks
-						li
-							// inner menu: contains the actual data
-							ul.menu
-								li
-									// Task item
-									a(href='#')
-										h3
-											| Design some buttons
-											small.pull-right 20%
-										.progress.xs
-											.progress-bar.progress-bar-aqua(style='width: 20%', role='progressbar', aria-valuenow='20', aria-valuemin='0', aria-valuemax='100')
-												span.sr-only 20% Complete
-								// end task item
-						li.footer
-							a(href='#') View all tasks
+				//- li.dropdown.tasks-menu
+				//- 	a.dropdown-toggle(href='#', data-toggle='dropdown')
+				//- 		i.fa.fa-flag-o
+				//- 		span.label.label-danger 9
+				//- 	ul.dropdown-menu
+				//- 		li.header You have 9 tasks
+				//- 		li
+				//- 			// inner menu: contains the actual data
+				//- 			ul.menu
+				//- 				li
+				//- 					// Task item
+				//- 					a(href='#')
+				//- 						h3
+				//- 							| Design some buttons
+				//- 							small.pull-right 20%
+				//- 						.progress.xs
+				//- 							.progress-bar.progress-bar-aqua(style='width: 20%', role='progressbar', aria-valuenow='20', aria-valuemin='0', aria-valuemax='100')
+				//- 								span.sr-only 20% Complete
+				//- 				// end task item
+				//- 		li.footer
+				//- 			a(href='#') View all tasks
 				// User Account: style can be found in dropdown.less
 				li.dropdown.user.user-menu
 					a.dropdown-toggle(href='#', data-toggle='dropdown')
@@ -102,7 +90,7 @@ header.main-header
 						// Menu Footer
 						li.user-footer
 							.pull-left
-								a.btn.btn-default.btn-flat(href='/user/profile') Trang cá nhân
+								a.btn.btn-default.btn-flat(href='/account/profile') Trang cá nhân
 							.pull-right
 								a.btn.btn-default.btn-flat(href='/auth/logout') Đăng xuất
 // ===============================================
