--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -1,6 +1,6 @@
 header.main-header
 	// Logo
-	a.logo(href='../../index2.html')
+	a.logo(href='/')
 		// mini logo for sidebar mini 50x50 pixels
 		span.logo-mini
 			b C
