role and permission

--- a/views/layout/sidebar.pug
+++ b/views/layout/sidebar.pug
@@ -73,7 +73,7 @@ aside.main-sidebar
 					li(class=(current == 'role') ? 'active' : null)
 						a(href='/role')
 							i.fa.fa-users
-							span Nhóm
+							span Vai trò
 					li(class=(current == 'permission') ? 'active' : null)
 						a(href='/permission')
 							i.fa.fa-user-secret
