--- a/public/stylesheets/data-table.css
+++ b/public/stylesheets/data-table.css
@@ -30,7 +30,7 @@
     border-top: 1px solid #ddd;
     vertical-align: middle;
 }
-.t-data-table tbody tr td .user-action {
+table tbody tr td .user-action {
     padding: 2px 6px;
     margin: 0 1px;
 }
