--- a/views/login-manager/index.pug
+++ b/views/login-manager/index.pug
@@ -1,10 +1,10 @@
 extends ../layout/default
 
 block stylesheets
-    link(rel='stylesheet', href='/stylesheets/select-option.css')
+    link(rel='stylesheet', href='/libs/bootstrap-chosen/bootstrap-chosen.css')
     link(rel='stylesheet', href='/stylesheets/data-table.css')
 block javascripts
-    script(src='/javascripts/select-option.js')
+    script(type='text/javascript', src='/libs/bootstrap-chosen/dist/chosen.jquery-1.4.2/chosen.jquery.min.js')
     script(src='/javascripts/data-table.js')
     script(type='text/javascript').
         //- document.addEventListener("DOMContentLoaded", function(event) {
