--- a/views/news/create.pug
+++ b/views/news/create.pug
@@ -4,13 +4,13 @@ block stylesheets
     link(rel='stylesheet', href='/libs/froala-editor/css/froala_editor.pkgd.min.css')
     link(rel='stylesheet', href='/libs/froala-editor/css/froala_style.min.css')
     link(rel='stylesheet', href='/libs/bootstrap-datetime-picker/css/bootstrap-datetimepicker.min.css')
-    link(rel='stylesheet', href='/stylesheets/select-option.css')
+    link(rel='stylesheet', href='/libs/bootstrap-chosen/bootstrap-chosen.css')
     link(rel='stylesheet', href='/libs/cropperjs/dist/cropper.min.css')
     link(rel='stylesheet', href='/stylesheets/cropper-editor.css')
 block javascripts
     script(type='text/javascript', src='/libs/froala-editor/js/froala_editor.pkgd.min.js')
     script(type='text/javascript', src='/libs/bootstrap-datetime-picker/js/bootstrap-datetimepicker.min.js')
-    script(type='text/javascript', src='/javascripts/select-option.js')
+    script(type='text/javascript', src='/libs/bootstrap-chosen/dist/chosen.jquery-1.4.2/chosen.jquery.min.js')
     script(type='text/javascript', src='/libs/cropperjs/dist/cropper.min.js')
     script(type='text/javascript', src='/javascripts/cropper-editor.js')
     script(type='text/javascript').
@@ -45,14 +45,9 @@ block javascripts
                 cropBoxResizable: false
             }
         });
-        new SelectOption({
-            selector: '#select-category',
-            search: true
-        })
-        new SelectOption({
-            selector: '#select-status',
-            search: false
-        });
+        $('#select-category').chosen({});
+    
+        $('#select-category').chosen({disable_search: true});
 
 block content
     include ./form
