--- a/views/role/edit.pug
+++ b/views/role/edit.pug
@@ -12,17 +12,17 @@ block content
     // Content Header (Page header)
     section.content-header
         h1
-            | Thêm quyền truy cập
+            | Thêm vai trò
         ol.breadcrumb
             li
                 a(href='/')
                     i.fa.fa-dashboard
                     |  Dashboard
             li
-                a(href='/permission')
+                a(href='/role')
                     i.fa.fa-briefcase
-                    |  Permission
-            li.active Thêm mới
+                    |  Role
+            li.active Chỉnh sửa
     // Main content
     section.content
         .row
