--- a/views/role/create.pug
+++ b/views/role/create.pug
@@ -12,16 +12,16 @@ block content
     // Content Header (Page header)
     section.content-header
         h1
-            | Thêm quyền truy cập
+            | Thêm vai trò
         ol.breadcrumb
             li
                 a(href='/')
                     i.fa.fa-dashboard
                     |  Dashboard
             li
-                a(href='/permission')
+                a(href='/role')
                     i.fa.fa-briefcase
-                    |  Permission
+                    |  Role
             li.active Thêm mới
     // Main content
     section.content
